namespace Pos.BL.Interfaces
{
    public interface IPosEngine
    {
        public Task Run();
    }
}