namespace Pos.Entities.Commands
{
    public class DataEnterCommand : AbstractCommand
    {
        public override CommandLabel CommandLabel => CommandLabel.Data;
    }
}
