namespace Pos.Entities.Commands
{
    public class MoveDownCommand : AbstractCommand
    {
        public override CommandLabel CommandLabel => CommandLabel.MoveDown;
    }
}


