using Pos.Entities.States;

internal class ExitState : AbstractState
{
    public override PosState PosState => PosState.ExitState;
}

