namespace Pos.Entities.States
{
    internal class InitState : AbstractState
    {
        public override PosState PosState => PosState.InitState;
    }
}