namespace Pos.Entities.States
{
    public enum PosState
    {
        None,
        InitState,
        AuthState,
        MenuState,
        RegistrationState,
        ExitState,
        ReportState
    }
}
