namespace Pos.Entities.User
{
    public record DataEntity
    {
    }
}